overflow issue on mobile

--- a/src/about/about.css
+++ b/src/about/about.css
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     margin-top:50px;
+    overflow: hidden;
     
 }
 .about{
