--- a/src/home/home.css
+++ b/src/home/home.css
@@ -83,7 +83,8 @@
    width:50vw;
    margin-left:auto;
    margin-right:auto;
-   margin-bottom:20px
+   margin-bottom:20px;
+   overflow:hidden;
 }
 .third-section >p{
     width:400px;
